# support-desk-rust

./: .env.example  Cargo.toml  POSTMAN_SETUP.md  Support_Desk_API.postman_collection.json  Support_Desk_Development.postman_environment.json  docker-compose.yml
.sqlx/: query-19b00b4ae7032f77eb9b7d072d0373c8271799d8ac0337f049ded7fd3c3d7ef9.json  query-3f91f87a92a1fd9b366a551df4f6680e5a96b2bd1e5d2599a481d5b28b82a556.json  query-45e7e66cc654c9fe48d38feea9b185309cfa241e5e9eb9d66b4da47b47dc6bb3.json  query-80d0bfafc81e2333076079225a913505c081f0e8e1d4c6949214e496e4bb8f81.json  query-9b88e9ef4b6a46548750becdba51e7d4fd06a3fb47a3f49159a3cffb6690a275.json  query-f762dd0e47a51f6f168ca63b0664f6524e54155a201cb23561eb88e8d791e1ad.json
ebook-rust/: 00-daftar-isi.md  00-sections.md  01-mengenal-rust.md  02-instalasi-project-pertama.md  03-rust-vs-go.md  04-variabel-tipe-data.md  05-string-di-rust.md  06-control-flow.md  07-fungsi.md  08-ownership.md  09-borrowing-references.md  10-struct-method.md  11-enum-pattern-matching.md  12-error-handling.md  13-traits.md  14-generics-collections.md  15-iterator-closure.md  16-module-system.md  17-async-tokio.md  18-setup-axum.md  19-routing-handler.md  20-serde-json.md  21-validasi-input.md  22-respons-api-standar.md  23-postgresql-sqlx-setup.md  24-migrations-schema.md  25-repository-user-ticket.md  26-repository-response-dashboard.md  27-auth-register-login.md  28-jwt-middleware.md  29-rbac.md  30-service-ticket-response.md  31-service-user-dashboard.md  32-wiring-routes.md  33-testing-unit.md  34-testing-integration.md  35-penutup.md  book-overview.md
src/: db.rs  lib.rs  (+1 more)
(+47 files in other folders)
