[package]
name = "support-desk"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
password-hash = "0.5"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Utils
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"